web/themes/custom/glazed_subtheme/css/style.css
/* ... */
#rocket .wrap-containers ul.js-pager__items:not(.og-grid) li:before {
    display: none;
}

#rocket ul.js-pager__items li.pager__item.pager__item--first a,
#rocket ul.js-pager__items li.pager__item.pager__item--previous a,
#rocket ul.js-pager__items li.pager__item.pager__item--next a,
#rocket ul.js-pager__items li.pager__item.pager__item--last a {
    position: relative;
    font-size: 0px;
}

#rocket ul.js-pager__items li.pager__item.pager__item--next a:before {
    color: #0054A4;
    font-style: normal;
    content: "\f105";
    font: normal normal normal 16px/1 FontAwesome;
    line-height: 1;
    top: 5px;
    position: relative;
}

#rocket ul.js-pager__items li.pager__item.pager__item--last a:before {
    color: #0054A4;
    font-style: normal;
    content: "\f101";
    font: normal normal normal 16px/1 FontAwesome;
    line-height: 1;
    top: 5px;
    position: relative;
}

#rocket ul.js-pager__items li.pager__item.pager__item--first a:before {
    color: #0054A4;
    font-style: normal;
    content: "\f100";
    font: normal normal normal 16px/1 FontAwesome;
    line-height: 1;
    top: 5px;
    position: relative;
}

#rocket ul.js-pager__items li.pager__item.pager__item--previous a:before {
    color: #0054A4;
    font-style: normal;
    content: "\f104";
    font: normal normal normal 16px/1 FontAwesome;
    line-height: 1;
    top: 5px;
    position: relative;
}

#rocket ul.js-pager__items li.page-item .page-link {
    padding: 0px;
    border-width: 0px;
    margin: 0px 5px 0 0;
    line-height: 41px;

}

.path-search #search-form .form-type-search input.form-control:focus {
    color: #111;
    border-color: rgba(0, 0, 0, .7);
    -webkit-box-shadow: 0 0 3px rgb(0 0 0 / 30%);
    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, .3);
    box-shadow: 0 0 3px rgb(0 0 0 / 30%);
    outline: none;
}

/*Task-201 Start*/
#rocket .wrap-containers a {
    text-decoration: none;
    color: #0054A4;
    transition: all 0.2s ease-in-out;
}

#rocket .wrap-containers a:hover {
    color: #0b88ff;
}

/*Task-201 End*/
/*Task-198 End*/
.block-views-blockrocket-product-images-block-1 .form-group {
    margin-bottom: 0 !important;
}

/*Task-198 End*/
.node-130 .custom_imgs img {
    height: auto;
    margin: 0 auto;
}

.node-130 .view-id-landing_image .views-field-field-main-photo img.img-responsive {
    min-height: auto;
    min-width: inherit;
    object-fit: cover;
}

.node-130 #block-rocketlandingcontentwithimage .az-row--sm.az-row--equal-height.row {
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}

.node-130 #block-rocketlandingcontentwithimage .az-element.az-ctnr.az-column.col-sm-8 {
    width: 80%;
    padding-right: 0px;
}

.node-130 #block-rocketlandingcontentwithimage .az-element.az-ctnr.az-column.col-sm-8 h3 {
    font-weight: 700 !important;
    font-family: "eurostile", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
}

.node-130 #block-rocketlandingcontentwithimage .az-element.az-cms-element.custom_imgs {
    margin: 20px;

}

.node-130 #block-rocketlandingcontentwithimage .az-element.az-ctnr.az-column.col-sm-4 {
    width: 20%;
    padding-right: inherit;
    padding-left: 0px;
}

.fluid-width-video-wrapper {
    padding-top: 50%;
    width: 100%;
    position: relative;
    overflow: hidden;
    overflow-x: hidden;
    overflow-y: hidden;
}

.fluid-width-video-wrapper iframe {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.view-id-product_related {
    padding-top: 50px;
    padding-top: 40px;
    background-color: rgba(206, 205, 201, 0.2);
}

@media only screen and (max-width: 991px) {

    a.logo.navbar-btn {
        padding-top: 0px;
    }
}

@media only screen and (max-width: 768px) {
    button.btn.btn-navbar.tb-megamenu-button {
        position: absolute;
        top: 20px;
        right: 15px;
    }

    .path-search .page-title span {
        margin-top: 0;
        top: 0px;
    }
}

section#block-views-block-product-related-block-1 {
    padding-bottom: 60px !important;
}

